wordpress project added

--- a/index.html
+++ b/index.html
@@ -43,18 +43,29 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="http://garywaller246.pythonanywhere.com/">itour<br />
-									Tour booking website</a></h2>
-									<p>Final project at Developer Institute coding bootcamp, using Python and Django.<br />Deployed with pythonanywhere<br />Worked in team of three. You don't know github until you work in teams...</p>
+									<h2><a href="http://chabadbakabuilding.website/">Chabad of Baka<br />
+									Building campaign website</a></h2>
+									<p>Freelance project for Chabad of Baka to help fundraising for their new building.<br />Built with Wordpress<br />Great experience with devops and troubleshooting errors.</p>
 								</header>
-								<a href="http://garywaller246.pythonanywhere.com/" class="image main"><img src="images/itour.png" alt="" /></a>
+								<a href="http://chabadbakabuilding.website/" class="image main"><img src="images/chabadbaka.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/garywaller246/itour.com" class="button large">See the code</a></li>
+									<li><a href="#" class="button large">No code available</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<h2><a href="http://garywaller246.pythonanywhere.com/">itour<br />
+										Tour booking website</a></h2>
+									</header>
+									<a href="http://garywaller246.pythonanywhere.com/" class="image fit"><img src="images/itour.png" alt="" /></a>
+									<p>Final project at Developer Institute coding bootcamp, using Python and Django.<br />Deployed with pythonanywhere<br />Worked in team of three. You don't know github until you work in teams.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/garywaller246/itour.com" class="button">See the code</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<h2><a href="https://lms.vinciworks.com/review/CourseLaunch/Courseplayer.aspx?queryStringMain=9idBs03r6T/n90p/w8yEIf85hatAEEzs7jHsGRnM806xi4h1OkNf0M2zNo5ypc0z">Phishing 2.0<br />
