added oldsailor project

--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="https://garywaller246.github.io/oldsailorproject/">oldSailor<br />
+										Tour booking website</a></h2>
+									</header>
+									<a href="https://garywaller246.github.io/oldsailorproject/" class="image fit"><img src="images/oldsailor.png" alt="" /></a>
+									<p>Pratice project making a clean and responsive one page site.<br />Deployed with github pages<br />Built using HTML CSS Javascipt and Jquery, ensuring clean and readable code.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/garywaller246/oldsailorproject" class="button">See the code</a></li>
+									</ul>
+								</article>								
+								<article>
+									<header>
 										<h2><a href="https://lms.vinciworks.com/review/CourseLaunch/Courseplayer.aspx?queryStringMain=9idBs03r6T/n90p/w8yEIf85hatAEEzs7jHsGRnM806xi4h1OkNf0M2zNo5ypc0z">Phishing 2.0<br />
 										Cyber security mini course</a></h2>
 									</header>
