subtitle change oldsailor project

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<article>
 									<header>
 										<h2><a href="https://garywaller246.github.io/oldsailorproject/">oldSailor<br />
-										Tour booking website</a></h2>
+										Food delievery service</a></h2>
 									</header>
 									<a href="https://garywaller246.github.io/oldsailorproject/" class="image fit"><img src="images/oldsailor.png" alt="" /></a>
 									<p>Pratice project making a clean and responsive one page site.<br />Deployed with github pages<br />Built using HTML CSS Javascipt and Jquery, ensuring clean and readable code.</p>
