subtitle change oldsailor project

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://garywaller246.github.io/oldsailorproject/">oldSailor<br />
+										<h2><a href="https://garywaller246.github.io/oldsailorproject/">Old Sailor<br />
 										Food delievery service</a></h2>
 									</header>
 									<a href="https://garywaller246.github.io/oldsailorproject/" class="image fit"><img src="images/oldsailor.png" alt="" /></a>
